[gd_scene load_steps=13 format=2]

[ext_resource path="res://ExtraTheatre/Menu.gd" type="Script" id=1]
[ext_resource path="res://ThisIsForTheMenu.png" type="Texture" id=2]
[ext_resource path="res://TileMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUH2.png" type="Texture" id=4]
[ext_resource path="res://HUH1.png" type="Texture" id=5]
[ext_resource path="res://BingosBadestSounds/SussyMusic.ogg" type="AudioStream" id=6]
[ext_resource path="res://font48.tres" type="DynamicFont" id=7]

[sub_resource type="InputEventAction" id=5]
action = "ui_cancel"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 5 )

[sub_resource type="Animation" id=6]
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.3, 3.6, 3.9, 4.2, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 160, 96 ), Vector2( 96, 96 ), Vector2( 160, 96 ), Vector2( 96, 96 ), Vector2( 160, 96 ), Vector2( 96, 96 ), Vector2( 160, 96 ), Vector2( 224, 32 ), Vector2( 224, 96 ), Vector2( 96, 96 ), Vector2( 96, 32 ), Vector2( 160, 96 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.25, 1.25 ), Vector2( 1, 1 ), Vector2( 1.25, 1.25 ), Vector2( 1, 1 ), Vector2( 1.25, 1.25 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 608, 576 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "The Hell?"
length = 10.0
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.08333, 1.16667, 1.25, 1.33333, 1.41667, 1.5, 1.58333, 1.66667, 1.75, 1.83333, 1.91667, 2, 2.08333, 4.16667, 4.75, 4.83333, 4.91667, 5, 5.08333, 5.16667, 5.25, 5.33333, 5.41667, 5.75, 5.83333, 5.91667, 6, 6.08333, 6.16667, 6.25, 6.33333, 6.41667, 6.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 5, 6, 7, 8, 9, 10, 10, 9, 8, 7, 6, 5, 6, 0, 12, 6, 6, 7, 8, 9, 10, 11, 10, 12, 10, 11, 10, 9, 8, 7, 6, 5, 6, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.916667, 1, 2, 4, 4.4, 4.5, 4.65, 5.4, 5.5, 5.8, 5.9, 6.33333, 6.41667, 6.5, 7.5, 8, 8.08333, 8.16667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 608, 576 ), Vector2( 608, 576 ), Vector2( 608, 576 ), Vector2( 224, 576 ), Vector2( 224, 576 ), Vector2( 224, 416 ), Vector2( 224, 448 ), Vector2( 256, 288 ), Vector2( 512, 288 ), Vector2( 512, 320 ), Vector2( 512, 160 ), Vector2( 480, 160 ), Vector2( 256, 160 ), Vector2( 224, 160 ), Vector2( 224, 192 ), Vector2( 160, 576 ), Vector2( 160, 768 ), Vector2( 768, 768 ), Vector2( 768, -64 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3.83333, 5.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 160.0
margin_top = 96.0
margin_right = 601.001
margin_bottom = 161.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 7 )
text = "Zakariae's First Game"

[node name="Button" type="Button" parent="."]
margin_left = 256.0
margin_top = 192.0
margin_right = 480.0
margin_bottom = 256.0
rect_min_size = Vector2( 2, 2 )
text = "New Game"
icon = ExtResource( 5 )

[node name="Button6" type="Button" parent="."]
margin_left = 256.0
margin_top = 192.0
margin_right = 480.0
margin_bottom = 256.0
rect_min_size = Vector2( 2, 2 )
text = "New Game"
icon = ExtResource( 5 )

[node name="Button5" type="Button" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 72.0
margin_bottom = 64.0
rect_min_size = Vector2( 2, 2 )
shortcut = SubResource( 2 )
text = "Quit"

[node name="Button2" type="Button" parent="."]
margin_left = 256.0
margin_top = 320.0
margin_right = 480.0
margin_bottom = 384.0
rect_min_size = Vector2( 2, 2 )
text = "More"
icon = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Scale = SubResource( 6 )

[node name="Button3" type="Button" parent="."]
margin_left = 256.0
margin_top = 640.0
margin_right = 480.0
margin_bottom = 704.0
text = "2023 - 2024, ZO Games"
flat = true

[node name="Button4" type="Button" parent="."]
visible = false
margin_left = 256.0
margin_top = 640.0
margin_right = 480.0
margin_bottom = 704.0
text = "2023 - 2024, Sussy Tqdq's Factory"
flat = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 608, 576 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
flip_h = true
hframes = 13

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
"anims/The Hell?" = SubResource( 4 )

[node name="TileMap" parent="." instance=ExtResource( 3 )]
position = Vector2( 64, 544 )
z_index = -11
tile_data = PoolIntArray( 131069, 0, 0, 131070, 0, 1, 131071, 0, 1, 65536, 0, 2, 65538, 0, 0, 65539, 0, 1, 65540, 0, 1, 65541, 0, 1, 65542, 0, 1, 65543, 0, 1, 65544, 0, 1, 65545, 0, 1, 65546, 0, 1, 65547, 0, 2, 196605, 0, 131072, 196606, 0, 131073, 196607, 0, 131073, 131072, 0, 131074, 131074, 0, 131072, 131075, 0, 131073, 131076, 0, 131073, 131077, 0, 131073, 131078, 0, 131073, 131079, 0, 131073, 131080, 0, 131073, 131081, 0, 131073, 131082, 0, 131073, 131083, 0, 131074 )

[node name="SUS2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="Label2" type="Label" parent="."]
margin_left = 394.0
margin_top = 703.0
margin_right = 716.0
margin_bottom = 717.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ver1 Build 03"
align = 2

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Button6" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Button5" to="." method="_on_Button5_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_down" from="Button3" to="." method="_on_Button3_button_down"]
[connection signal="button_down" from="Button4" to="." method="_on_Button3_button_down"]
